tests/extproc/vcr/extproc.yaml
# Copyright Envoy AI Gateway Authors
# SPDX-License-Identifier: Apache-2.0
# The full text of the Apache license is available in the LICENSE file at
# the root of the repo.

metadataNamespace: ai_gateway_llm_ns
schema:
  name: OpenAI
  version: v1
modelNameHeaderKey: x-model-name
backends:
  - name: openai
    schema:
      name: OpenAI
      version: v1
